--- a/PrzepisyWeb.csproj
+++ b/PrzepisyWeb.csproj
@@ -15,6 +15,10 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\Recipes\" />
+  </ItemGroup>
+
 
 
 </Project>
