--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "RecipeDB": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Recipe_DB5;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "RecipeDB": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Recipe_DBv6;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
     "newContextConnection": "Server=(localdb)\\mssqllocaldb;Database=PrzepisyWeb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
